Fix refaster for SetOfSetsUnionFind.java